tenzir/tests/exec/expr/escape/raw/unknown_escape_blob.txt
error: found unknown escape sequence `t\`
 --> exec/expr/escape/raw/unknown_escape_blob.tql:5:12
  |
5 |   b1: b"test\ktest"
  |            ^^ 
  |
